--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,3 +21,29 @@ test-job1:
   script:
     - npm install
     - npm run test -- --no-watch --browsers=ChromeHeadlessCI
+
+deploy-job:
+  stage: deploy
+  image: docker:latest
+  variables:
+    CONTAINER_NAME: "$CONTAINER_NAME"
+    HOST_IP: "$HOST_IP"
+    HOST_PORT: "$HOST_PORT"
+  before_script:
+    - apk add openssh-client
+    - eval $(ssh-agent -s)
+    - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
+    - mkdir -p ~/.ssh
+    - chmod 700 ~/.ssh
+  script:
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+    - docker build -t $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA -t $CI_REGISTRY_IMAGE:latest .
+    - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
+    - docker push $CI_REGISTRY_IMAGE:latest
+    - |
+      ssh -o StrictHostKeyChecking=no ubuntu@$HOST_IP "\
+      docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY; \
+      docker pull $CI_REGISTRY_IMAGE:latest || true; \
+      docker rm -f $CONTAINER_NAME; \
+      docker run -it -d -p $HOST_PORT:4200 --name $CONTAINER_NAME $CI_REGISTRY_IMAGE:latest;"
+    - 'echo "Website link: http://$HOST_IP:$HOST_PORT"'
